
Slick 7.x-2.0-dev, 2016-06-07
------------------------------
- Fixed for regression with a mix of image/video/audio with lightboxes.
- #2719051 by gausarts: Merge theme_slick_media() and theme_slick_image_lazy().
- #2726913 by usdv, tyler.frankenstein: FireFox throws a 404 on default img src.
- #2738711 by klausi: PHP7 - Uniform Variable Syntax.

Slick 7.x-2.0-dev, 2016-05-07
-----------------------------
- Updated arrows defaults values which was letfover.
- Fixed for broken dots.
- Update arrows defaults values.
- Updated slick.load.min.js to v1.6.0.
- Fixed for slick_get_dimensions() to execute once.
- Removed _slick_build_slide() to reduce function calls.
- Removed slick_get_available_skins() for slick_get_skins_by_group().
- Removed trivial iframe $alternative_content for old browsers.
- Removed a few trivial drupal_alters which can be done via theme/preprocess or
  UI, or core drupal_alters, or has no real benefit:
  - slick_image_info_alter()
  - slick_inline_css_info_alter()
  - slick_element_default_settings_info_alter()
  - slick_attach_info_alter()
  - slick_options_info_alter()
- Micro optimization.

Slick 7.x-2.0-dev, 2016-04-23
-----------------------------
- #2711809: Move slick grid logic out of slide into grid.

Slick 7.x-2.0-dev, 2016-04-20
-----------------------------
- #2705439 by lolhonk: PHP < 5.4 compatibility.
- #2709519 by slefevre1: slick_ui help references slick_example, which is part
  of slick_extras.
- Various description cleanup.
- Added (assumed) "Slideshow" file type support like Media Entity Slideshow.

Slick 7.x-2.0-dev, 2016-03-28
-----------------------------
- Cleaned up arrows and dots skins from the Slick UI form Skin selection.
- A few more cleanups.

Slick 7.x-2.0-dev, 2016-03-23
-----------------------------
- #2692887: Remove redundant asNavFor selectors.
- #2692569: Use grouping to simplify skins.
- The following functions are moved out of slick.admin.inc to match D8 into
  SlickUi.php where they belong to: